Ui container classing it up

--- a/public/samples/1-html-about-me/9-about-me-semantic-ui.html
+++ b/public/samples/1-html-about-me/9-about-me-semantic-ui.html
@@ -7,7 +7,7 @@
 	</head>
 
 	<body>
-		<div id="container">
+		<div id="container" class="ui container">
 			<header>
 				<h1>Ryan Morris</h1>
 				<h2>Man of mystery</h2>
