--- a/public/exercises/card-grid/index.html
+++ b/public/exercises/card-grid/index.html
@@ -6,6 +6,6 @@
 	</head>
 
 	<body>
-        <!-- write our  solution here and in styles.css -->
+       <!-- write your solution here and in the css -->
 	</body>
 </html>
