--- a/public/solutions/closure/index.html
+++ b/public/solutions/closure/index.html
@@ -2,17 +2,20 @@
 <html>
   <head>
     <title>Closure Exercise</title>
-    <link href="/core.css" rel="stylesheet" type="text/css"/>
+    <link rel="stylesheet" type="text/css" href="/styles/semantic.min.css">
+    <link href="/styles/core.css" rel="stylesheet" type="text/css"/>
   </head>
 
   <body>
-    <h1>Closure Exercise</h1>
+    <div class="ui container">
+      <h1>Closure Exercise</h1>
+      <section id="confirm-target" class="ui segment">
 
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="/linter.js"></script>
-    <script src="parse.js"></script>
-    <script src="/lib/jquery.js"></script>
-    <script src="/lib/confirm.js"></script>
-    <script src="/lib/test/closure_test.js"></script>
+      </section>
+    </div>
+    <script src="index.js"></script>
+    <script src="/scripts/jquery.js"></script>
+    <script src="/scripts/confirm.js"></script>
+    <script src="/tests/closure_test.js"></script>
   </body>
 </html>
