--- a/public/exercises/stub/index.html
+++ b/public/exercises/stub/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Closure Exercise</title>
+    <title>Stub Exercise</title>
     <link rel="stylesheet" type="text/css" href="/styles/semantic.min.css">
     <link href="/styles/core.css" rel="stylesheet" type="text/css"/>
   </head>
 
   <body>
     <div class="ui container">
-      <h1>Closure Exercise</h1>
+      <h1>Stub Exercise</h1>
       <section id="confirm-target" class="ui segment">
 
       </section>
@@ -16,6 +16,5 @@
     <script src="index.js"></script>
     <script src="/scripts/jquery.js"></script>
     <script src="/scripts/confirm.js"></script>
-    <script src="/tests/closure_test.js"></script>
   </body>
 </html>
