--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 
   <body>
     <div class="ui container">
-      
+
       <div class="ui header">
         <h1>Welcome to Bootcamp</h1>
       </div>
@@ -33,8 +33,8 @@
       <section class="ui segment">
         <h2>General Purpose</h2>
         <ul>
-          <li><a href="dom/">DOM Playground</a></li>
-          <li><a href="sandbox/">JavaScript Sandbox</a></li>
+          <li><a href="samples/dom/">DOM Playground</a></li>
+          <li><a href="samples/sandbox/">JavaScript Sandbox</a></li>
         </ul>
       </section>
     </div>
