--- a/public/exercises/ajax/index.html
+++ b/public/exercises/ajax/index.html
@@ -2,11 +2,12 @@
 <html>
   <head>
     <title>Ajax Exercise</title>
-    <link href="/core.css" rel="stylesheet" type="text/css"/>
-    <link href="index.css" rel="stylesheet" type="text/css"/>
+    <link rel="stylesheet" type="text/css" href="/styles/semantic.min.css">
+    <link href="/styles/core.css" rel="stylesheet" type="text/css"/>
   </head>
 
   <body>
+
     <h1>Ajax Exercise</h1>
 
     <div>
@@ -14,15 +15,16 @@
     </div>
 
     <div class="container">
-      <ul id="artists">
+      <ul id="data">
       </ul>
 
       <ul id="details">
       </ul>
     </div>
 
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="/linter.js"></script>
+    <script src="/scripts/jquery.js"></script>
+    <script src="/scripts/semantic.js"></script>
     <script src="ajax.js"></script>
+
   </body>
 </html>
