--- a/public/exercises/events/index.html
+++ b/public/exercises/events/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <title>Events Exercise</title>
-    <link href="/core.css" rel="stylesheet" type="text/css"/>
+    <link rel="stylesheet" type="text/css" href="/styles/semantic.min.css">
+    <link href="/styles/core.css" rel="stylesheet" type="text/css"/>
   </head>
 
   <body>
@@ -38,8 +39,6 @@
       <span>0</span>
     </p>
 
-    <script src="/socket.io/socket.io.js"></script>
-    <script src="/linter.js"></script>
     <script src="events.js"></script>
   </body>
 </html>
