--- a/public/solutions/todos/index.html
+++ b/public/solutions/todos/index.html
@@ -12,7 +12,7 @@
 
     <div class="ui container">
 
-			<form class="ui form">
+			<form id="todo-form" method="POST" class="ui form">
 				<div class="field">
 					<input type="text" name="title" placeholder="Title">
 				</div>
@@ -20,36 +20,31 @@
 			</form>
 
 			<div class="ui segment">
-				<div class="ui relaxed divided list">
-						<div class="item">
-							<i class="large square outline middle aligned icon"></i>
-							<div class="content">
-								<a class="header">Be awesome</a>
-								<div class="description">Added 10 mins ago</div>
-							</div>
-						</div>
-						<div class="item">
-							<i class="large square outline middle aligned icon"></i>
-							<div class="content">
-								<a class="header">Buy an apple</a>
-								<div class="description">Added 22 mins ago</div>
-							</div>
-						</div>
-						<div class="item disabled">
-							<i class="large check square outline middle aligned icon"></i>
-							<div class="content">
-								<a class="header">Run 10 miles</a>
-								<div class="description">Done 34 mins ago</div>
-							</div>
-						</div>
-					</div>
+				<div id="todo-list" class="ui relaxed divided list"></div>
 			</div>
 
 		</div>
 
+		<script id="item-template" type="text/x-handlebars-template">
+			<div class="item {{#if completed}}disabled{{/if}}">
+				{{#if completed}}
+				{{else}}
+					<div class="right floated content">
+						<i class="ui red icon remove"></i>
+					</div>
+				{{/if}}
+				<i class="large {{#if completed}}check{{/if}} square outline middle aligned icon"></i>
+				<div class="content">
+					<a class="header">{{title}}</a>
+					<div class="description">{{time}}</div>
+				</div>
+			</div>
+		</script>
+
     <!-- <script src="../ajax/ajax.js"></script> -->
 		<script src="/scripts/jquery.js"></script>
 		<script src="/scripts/handlebars-v4.0.11.js"></script>
-    <script src="/scripts/semantic.js"></script>
+		<script src="/scripts/semantic.js"></script>
+		<script src="script.js"></script>
   </body>
 </html>
