--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
-    <title>Web Dev Bootcamp</title>
+    <title>Web Dev BC</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="/styles/semantic.min.css">
   </head>
@@ -10,32 +10,63 @@
     <div class="ui container">
 
       <div class="ui header">
-        <h1>Welcome to Bootcamp</h1>
+        <h1>Welcome to class!</h1>
       </div>
 
       <section class="ui segment">
-        <h2>Exercises:</h2>
+        <h2 class="ui header">Exercises:</h2>
+
+        <h3 class="ui sub header">JavaScript Basics</h3>
         <ol>
           <li><a href="exercises/primitives/">Primitives</a></li>
           <li><a href="exercises/data-types/">Data Types</a></li>
-          <li><a href="exercises/control/">Control Flow</a></li>
-          <li><a href="exercises/parse/">Parsing</a></li>
-          <li><a href="exercises/copy/">Copy Function</a></li>
-          <li><a href="exercises/array/">Arrays</a></li>
-          <li><a href="exercises/closure/">Closures</a></li>
-          <li><a href="exercises/string/">Strings</a></li>
-          <li><a href="exercises/flags/">Flags</a></li>
-          <li><a href="exercises/events/">Events</a></li>
-          <li><a href="exercises/ajax/">Ajax</a></li>
+          <li><a href="exercises/control/">Control Flow (Level I)</a></li>
+          <li><a href="exercises/control-fb/">Control Flow (Level II) with user prompts</a></li>
         </ol>
-      </section>
 
-      <section class="ui segment">
-        <h2>General Purpose</h2>
-        <ul>
-          <li><a href="samples/dom/">DOM Playground</a></li>
-          <li><a href="samples/sandbox/">JavaScript Sandbox</a></li>
-        </ul>
+        <h3 class="ui sub header">Functions</h3>
+        <ol>
+          <li><a href="exercises/fizz-buzz/">Functional Fizz Buzz</a></li>
+          <li><a href="exercises/parse/">Parsing function arguments</a></li>
+          <li><a href="exercises/scope/">Sharing Scope</a></li>
+          <li><a href="exercises/scope-clean/">Scope Clean</a></li>
+        </ol>
+
+        <h3 class="ui sub header">Objects</h3>
+        <ol>
+          <li><a href="exercises/copy/">Clone an Object</a></li>
+          <li><a href="exercises/object-you/">Objectify Yourself</a></li>
+          <li><a href="exercises/array/">Arrays (Array Methods)</a></li>
+          <li><a href="exercises/string/">Strings (Processing Strings)</a></li>
+        </ol>
+
+        <h3 class="ui sub header">Functions Patterns & Closures</h3>
+          <li><a href="exercises/closure/">Temperature Storage w/ Closures</a></li>
+          <li><a href="exercises/guessing-machine/">Guessing Machine</a></li>
+        </ol>
+
+        <h3 class="ui sub header">Final Labs</h3>
+        <ol>
+          <li><a href="exercises/stub/">Stub</a></li>
+        </ol>
+
+
+        <h3 class="ui sub header">Day 2</h3>
+        <ol>
+            <li><a href="exercises/flags/">Flags</a></li>
+            <li><a href="exercises/events/">Events</a></li>
+            <li><a href="exercises/ajax/">Ajax</a></li>
+          <li><a href="exercises/card-grid/">Card Grid</a></li>
+          <li><a href="exercises/dom/">The DOM</a></li>
+
+          <li><a href="exercises/fruit/">Fruit Basket</a></li>
+          <li><a href="exercises/photo-grid/">Photo Grid</a></li>
+          <li><a href="exercises/promises/">Promises</a></li>
+
+          <li><a href="exercises/todos/">Todos</a></li>
+        </ol>
+
+        <p><a href="solutions">All Solutions</a></p>
       </section>
     </div>
   </body>
