--- a/public/solutions/guessing-machine/index.html
+++ b/public/solutions/guessing-machine/index.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Primitives Exercise</title>
+    <title>Guessing Game</title>
     <link rel="stylesheet" type="text/css" href="/styles/semantic.min.css">
     <link href="/styles/core.css" rel="stylesheet" type="text/css"/>
   </head>
 
   <body>
     <div class="ui container">
-      <h1>Primitives Exercise</h1>
-      <p>Complete the exercises in the script file and refresh the page to see the result of the tests.</p>
+      <h1>Guessing Game/Exercise</h1>
       <section id="confirm-target" class="ui segment">
-
+        <p>Sorry, no tests here...</p>
       </section>
     </div>
-    <script src="primitives.js"></script>
+    <script src="index.js"></script>
     <script src="/scripts/jquery.js"></script>
     <script src="/scripts/confirm.js"></script>
-    <script src="/tests/primitives_test.js"></script>
+    <!-- <script src="/tests/primitives_test.js"></script> -->
   </body>
 </html>
