--- a/public/index.html
+++ b/public/index.html
@@ -51,18 +51,22 @@
         </ol>
 
 
-        <h3 class="ui sub header">Day 2</h3>
+        <h3 class="ui sub header">The DOM</h3>
         <ol>
+            <li><a href="exercises/dom/">DOM Practice</a></li>
             <li><a href="exercises/flags/">Flags</a></li>
             <li><a href="exercises/events/">Events</a></li>
-            <li><a href="exercises/ajax/">Ajax</a></li>
-          <li><a href="exercises/card-grid/">Card Grid</a></li>
-          <li><a href="exercises/dom/">The DOM</a></li>
+        </ol>
 
-          <li><a href="exercises/fruit/">Fruit Basket</a></li>
-          <li><a href="exercises/photo-grid/">Photo Grid</a></li>
+        <h3 class="ui sub header">Asynchronous JavaScript</h3>
+        <ol>
+          <li><a href="exercises/ajax/">Ajax</a></li>
           <li><a href="exercises/promises/">Promises</a></li>
 
+
+          <li><a href="exercises/card-grid/">Card Grid</a></li>
+          <li><a href="exercises/fruit/">Fruit Basket</a></li>
+          <li><a href="exercises/photo-grid/">Photo Grid</a></li>
           <li><a href="exercises/todos/">Todos</a></li>
         </ol>
 
