--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,7 @@
         <h3 class="ui sub header">Final Labs</h3>
         <ol>
           <li><a href="exercises/stub/">Stub</a></li>
+          <li><a href="exercises/todos/">Todos (Ajax, Handlebars, DOM)</a></li>
         </ol>
 
 
@@ -62,12 +63,13 @@
         <ol>
           <li><a href="exercises/ajax/">Ajax</a></li>
           <li><a href="exercises/promises/">Promises</a></li>
+        </ol>
 
-
-          <li><a href="exercises/card-grid/">Card Grid</a></li>
-          <li><a href="exercises/fruit/">Fruit Basket</a></li>
-          <li><a href="exercises/photo-grid/">Photo Grid</a></li>
-          <li><a href="exercises/todos/">Todos</a></li>
+        <h3 class="ui sub header">jQuery</h3>
+        <ol>
+          <!-- <li><a href="exercises/card-grid/">HTML/CSS - Card Grid</a></li> -->
+          <li><a href="exercises/fruit/">Fruit Basket with jQuery</a></li>
+          <li><a href="exercises/photo-grid/">Photo Grid w/ Ajax</a></li>
         </ol>
 
         <p><a href="solutions">All Solutions</a></p>
