General updates to exercises, formatting

--- a/public/index.html
+++ b/public/index.html
@@ -1,79 +1,86 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>Web Dev BC</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
-    <link rel="stylesheet" href="/styles/semantic.min.css">
-  </head>
 
-  <body>
-    <div class="ui container">
+<head>
+  <title>Web Dev BC</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
+  <link rel="stylesheet" href="/styles/semantic.min.css">
+</head>
 
-      <div class="ui header">
-        <h1>Welcome to class!</h1>
-      </div>
+<body>
+  <div class="ui container">
 
-      <section class="ui segment">
-        <h2 class="ui header">Exercises:</h2>
-
-        <h3 class="ui sub header">JavaScript Basics</h3>
-        <ol>
-          <li><a href="exercises/primitives/">Primitives</a></li>
-          <li><a href="exercises/data-types/">Data Types</a></li>
-          <li><a href="exercises/control/">Control Flow (Level I)</a></li>
-          <li><a href="exercises/control-fb/">Control Flow (Level II) with user prompts</a></li>
-        </ol>
-
-        <h3 class="ui sub header">Functions</h3>
-        <ol>
-          <li><a href="exercises/fizz-buzz/">Functional Fizz Buzz</a></li>
-          <li><a href="exercises/parse/">Parsing function arguments</a></li>
-          <li><a href="exercises/scope/">Sharing Scope</a></li>
-          <li><a href="exercises/scope-clean/">Scope Clean</a></li>
-        </ol>
-
-        <h3 class="ui sub header">Objects</h3>
-        <ol>
-          <li><a href="exercises/copy/">Clone an Object</a></li>
-          <li><a href="exercises/object-you/">Objectify Yourself</a></li>
-          <li><a href="exercises/array/">Arrays (Array Methods)</a></li>
-          <li><a href="exercises/string/">Strings (Processing Strings)</a></li>
-        </ol>
-
-        <h3 class="ui sub header">Functions Patterns & Closures</h3>
-        <ol>
-          <li><a href="exercises/closure/">Temperature Storage w/ Closures</a></li>
-          <li><a href="exercises/guessing-machine/">Guessing Machine</a></li>
-        </ol>
-
-        <h3 class="ui sub header">Final Labs</h3>
-        <ol>
-          <li><a href="exercises/stub/">Stub</a></li>
-          <li><a href="exercises/todos/">Todos (Ajax, Handlebars, DOM)</a></li>
-        </ol>
-
-        <h3 class="ui sub header">The DOM</h3>
-        <ol>
-            <li><a href="exercises/dom/">DOM Practice</a></li>
-            <li><a href="exercises/flags/">Flags</a></li>
-            <li><a href="exercises/events/">Events</a></li>
-        </ol>
-
-        <h3 class="ui sub header">Asynchronous JavaScript</h3>
-        <ol>
-          <li><a href="exercises/ajax/">Ajax</a></li>
-          <li><a href="exercises/promises/">Promises</a></li>
-        </ol>
-
-        <h3 class="ui sub header">jQuery</h3>
-        <ol>
-          <!-- <li><a href="exercises/card-grid/">HTML/CSS - Card Grid</a></li> -->
-          <li><a href="exercises/fruit/">Fruit Basket with jQuery</a></li>
-          <li><a href="exercises/photo-grid/">Photo Grid w/ Ajax</a></li>
-        </ol>
-
-        <p><a href="solutions">All Solutions</a></p>
-      </section>
+    <div class="ui header">
+      <h1>Welcome to class!</h1>
     </div>
-  </body>
+
+    <section class="ui segment">
+      <h2 class="ui header">Exercises:</h2>
+
+      <h3 class="ui sub header">JavaScript Basics</h3>
+      <ol>
+        <li><a href="exercises/primitives/">Primitives</a></li>
+        <li><a href="exercises/data-types/">Data Types</a></li>
+        <li><a href="exercises/control/">Control Flow (Level I)</a></li>
+        <li><a href="exercises/control-fb/">Control Flow (Level II) with user prompts</a></li>
+      </ol>
+
+      <h3 class="ui sub header">Functions</h3>
+      <ol>
+        <li><a href="exercises/fizz-buzz/">Functional Fizz Buzz</a></li>
+        <li><a href="exercises/parse/">Parsing function arguments</a></li>
+        <li><a href="exercises/scope/">Sharing Scope</a></li>
+        <li><a href="exercises/scope-clean/">Scope Clean</a></li>
+      </ol>
+
+      <h3 class="ui sub header">Objects</h3>
+      <ol>
+        <li><a href="exercises/copy/">Clone an Object</a></li>
+        <li><a href="exercises/object-you/">Objectify Yourself</a></li>
+        <li><a href="exercises/array/">Arrays (Array Methods)</a></li>
+        <li><a href="exercises/string/">Strings (Processing Strings)</a></li>
+      </ol>
+
+      <h3 class="ui sub header">Functions Patterns & Closures</h3>
+      <ol>
+        <li><a href="exercises/closure/">Temperature Storage w/ Closures</a></li>
+        <li><a href="exercises/guessing-machine/">Guessing Machine</a></li>
+      </ol>
+
+      <h3 class="ui sub header">Object Oriented JS</h3>
+      <ol>
+        <li><a href="exercises/ood/">Prototypes, constructors and classes, oh my</a></li>
+      </ol>
+
+      <h3 class="ui sub header">Final Labs</h3>
+      <ol>
+        <li><a href="exercises/stub/">Stub</a></li>
+        <li><a href="exercises/todos/">Todos (Ajax, Handlebars, DOM)</a></li>
+      </ol>
+
+      <h3 class="ui sub header">The DOM</h3>
+      <ol>
+        <li><a href="exercises/dom/">DOM Practice</a></li>
+        <li><a href="exercises/flags/">Flags</a></li>
+        <li><a href="exercises/events/">Events</a></li>
+      </ol>
+
+      <h3 class="ui sub header">Asynchronous JavaScript</h3>
+      <ol>
+        <li><a href="exercises/ajax/">Ajax</a></li>
+        <li><a href="exercises/promises/">Promises</a></li>
+      </ol>
+
+      <h3 class="ui sub header">jQuery</h3>
+      <ol>
+        <!-- <li><a href="exercises/card-grid/">HTML/CSS - Card Grid</a></li> -->
+        <li><a href="exercises/fruit/">Fruit Basket with jQuery</a></li>
+        <li><a href="exercises/photo-grid/">Photo Grid w/ Ajax</a></li>
+      </ol>
+
+      <p><a href="solutions">All Solutions</a></p>
+    </section>
+  </div>
+</body>
+
 </html>
